# ChangeLog for www-plugins/gnash
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-plugins/gnash/ChangeLog,v 1.24 2010/03/23 23:48:37 chithanh Exp $

  23 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  gnash-0.8.7.ebuild:
  update USE flag checks

  17 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  gnash-0.8.7.ebuild, +files/gnash-0.8.7-amf-include.patch:
  Make agg the default renderer again, bug #309801. Attempt to fix build
  with USE="lirc", bug #286933

*gnash-0.8.7 (15 Mar 2010)

  15 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +gnash-0.8.7.ebuild, +files/gnash-0.8.7-klash.patch,
  +files/gnash-0.8.7-moc-qt4.patch, +files/gnash-0.8.7-xpcom-idldir.patch:
  Version bump. Fixes bug #285157, bug #286444, bug #298848, bug #302793,
  bug #304335 and bug #305311

  15 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  gnash-0.8.6.ebuild:
  make agg the default renderer as requested by upstream

  07 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  metadata.xml:
  add myself to maintainers

  10 Jan 2010; Tomáš Chvátal <scarabeus@gentoo.org> gnash-0.8.6.ebuild:
  QA: non-maint. commit: Fix build issues per bug #286491.

  22 Dec 2009; Peter Volkov <pva@gentoo.org> gnash-0.8.6.ebuild,
  +files/gnash-0.8.6-libssh-0.4.patch:
  Added patch to fix build with libssh-0.4, also updated deps, this package
  depends on libssh[server], not libssh2.'

  27 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org> gnash-0.8.5.ebuild,
  gnash-0.8.6.ebuild:
  Rename variable to correspond with kde eclass.

  12 Oct 2009; Jonathan Callen <abcd@gentoo.org> gnash-0.8.5.ebuild,
  gnash-0.8.6.ebuild:
  Downgrade KDE dep to fix hppa, ppc

  07 Oct 2009; Romain Perier <mrpouet@gentoo.org>
  gnash-0.8.6.ebuild:
  Fix missing pygtk dependency with python&gtk supports, per bug #287684.
  Many thanks to Ian Leonard.

  29 Sep 2009; Romain Perier <mrpouet@gentoo.org>