@@ -1,6 +1,10 @@
 # ChangeLog for www-plugins/gnash
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-plugins/gnash/ChangeLog,v 1.24 2010/03/23 23:48:37 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-plugins/gnash/ChangeLog,v 1.25 2010/03/24 08:24:07 chithanh Exp $
+
+  24 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  gnash-0.8.7.ebuild:
+  update USE flag checks more
 
   23 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
   gnash-0.8.7.ebuild:
